--- a/tutorials/02_add_cameras.ipynb
+++ b/tutorials/02_add_cameras.ipynb
@@ -8,57 +8,14 @@
     "\n",
     "## Overview\n",
     "\n",
-    "In this tutorial, you will learn how to add cameras in your engine. Let's go!🚀 "
+    "🚀 In this tutorial, you will learn how to add cameras."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preparation\n",
-    "\n",
-    "Similar as Tutorial01, specify your engine path and initialize XRFeitoria."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## import xrfeitoria\n",
-    "import xrfeitoria as xf\n",
-    "\n",
-    "## this engine_exec_path is just an example, replace it with your own engine path.\n",
-    "engine_exec_path = '/home/SENSETIME/wangfanzhou/fanzhou/blender-3.3.5-linux-x64/blender'\n",
-    "\n",
-    "from pathlib import Path\n",
-    "\n",
-    "exec_path_stem = Path(engine_exec_path).stem.lower()\n",
-    "if 'blender' in exec_path_stem:\n",
-    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True)\n",
-    "elif 'unreal' in exec_path_stem:\n",
-    "    xf_runner = xf.init_unreal(exec_path=engine_exec_path, background=False, new_process=True)\n",
-    "else:\n",
-    "    raise RuntimeError(\"Invalid engine path.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Add cameras\n",
-    "\n",
-    "The function ``xf_runner.Camera.spawn_camera`` add a camera into the scene. You can set the name, location, rotation and field of view of the new camera."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_camera = xf_runner.Camera.spawn_camera(name='My camera', location=(0, 0, 3), rotation=(90, 0, 0), fov=60)"
+    "## - TBD"
    ]
   }
  ],
