[fix] url of doc

--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ref to [doc](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/docs/en/_build/html/init.html), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
+    "Ref to [doc](https://xrfeitoria.readthedocs.io/en/latest/init.html), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
    ]
   }
  ],
