[Version] Bump version to v0.5.0 (#1)
* [fix] update actions

* update action

* typo

* lint

* update url to oss

* update zolly

* lint

* [fix] url of doc

--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -123,7 +123,7 @@
    "source": [
     "✨ Running the codes above should give a result as depicted below.\n",
     "\n",
-    "![](http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/pics/tutorial-01.png)"
+    "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/pics/tutorial-01.png)"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ref to [doc](http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/docs/en/_build/html/init.html), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
+    "Ref to [doc](https://xrfeitoria.readthedocs.io/en/latest/init.html), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
    ]
   }
  ],
