--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -150,8 +150,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ref to [doc](https://xrfeitoria.readthedocs.io/en/latest/init.html), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
+    "Ref to [api docs](../../apis/xrfeitoria.rst), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
