[fix] typo of url

--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -17,9 +17,7 @@
    "source": [
     "## Import XRFeitoria\n",
     "\n",
-    "After [Installing][1], import ``XRfeitoria`` by\n",
-    "\n",
-    "[1]: http://xrfeitoria.readthedocs.io/en/latest/installation.html"
+    "After [Installing](../../index.rst#installation), import ``XRfeitoria`` by"
    ]
   },
   {
