[Feature] Add more comprehensive error handling (#5)
* typo

* add macos

* readme: center badge

* typo

* assert project_path.exists()

* [add] assert project_path.suffix

* fix typo

* [add] version control in plugins

* [add] check engine process alive

* [add] docs in readme

* [doc] readme

* [doc] samples

* [fix] typo of url

--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -17,9 +17,7 @@
    "source": [
     "## Import XRFeitoria\n",
     "\n",
-    "After [Installing][1], import ``XRfeitoria`` by\n",
-    "\n",
-    "[1]: http://xrfeitoria.readthedocs.io/en/latest/installation.html"
+    "After [Installing](../../index.rst#installation), import ``XRfeitoria`` by"
    ]
   },
   {
@@ -152,11 +150,6 @@
    "source": [
     "Ref to [api docs](../../apis/xrfeitoria.rst), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
