remove xf_runner.engine

--- a/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
+++ b/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
@@ -63,6 +63,7 @@
     "exec_path_stem = Path(engine_exec_path).stem.lower()\n",
     "if 'blender' in exec_path_stem:\n",
     "    # Open Blender\n",
+    "    engine = 'blender'\n",
     "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True)\n",
     "elif 'unreal' in exec_path_stem:\n",
     "    # Unreal Engine requires a project to be opened\n",
@@ -75,6 +76,7 @@
     "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial03/assets/')\n",
     "\n",
     "    # Open Unreal Engine\n",
+    "    engine = 'unreal'\n",
     "    xf_runner = xf.init_unreal(exec_path=engine_exec_path, \n",
     "                                background=False, \n",
     "                                new_process=True, \n",
@@ -204,7 +206,7 @@
    "outputs": [],
    "source": [
     "# save the level\n",
-    "if xf_runner.engine == 'unreal':\n",
+    "if engine == 'unreal':\n",
     "    xf_runner.utils.save_current_level()   "
    ]
   },
@@ -299,7 +301,7 @@
     "    # The render passes define what kind of data you want to render, such as img, depth, normal, etc.\n",
     "    # and what kind of format you want to save, such as png, exr, etc.\n",
     "    seq.add_to_renderer(\n",
-    "        output_path=f'./tutorial03/outputs/{xf_runner.engine}/',\n",
+    "        output_path=f'./tutorial03/outputs/{engine}/',\n",
     "        resolution=(1280, 720),\n",
     "        render_passes=[RenderPass('img', 'png')]\n",
     "    )"
