--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -70,6 +70,7 @@
     "exec_path_stem = Path(engine_exec_path).stem.lower()\n",
     "if 'blender' in exec_path_stem:\n",
     "    # Open Blender\n",
+    "    engine = 'blender'\n",
     "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True)\n",
     "elif 'unreal' in exec_path_stem:\n",
     "    # Unreal Engine requires a project to be opened\n",
@@ -82,12 +83,11 @@
     "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial01/assets/')\n",
     "\n",
     "    # Open Unreal Engine\n",
+    "    engine = 'unreal'\n",
     "    xf_runner = xf.init_unreal(exec_path=engine_exec_path, \n",
     "                                background=False, \n",
     "                                new_process=True, \n",
-    "                                project_path='./tutorial01/assets/XRFeitoriaUnreal_Sample/XRFeitoriaUnreal_Sample.uproject',\n",
-    "                                replace_plugin=True,\n",
-    "                                dev_plugin=True)"
+    "                                project_path='./tutorial01/assets/XRFeitoriaUnreal_Sample/XRFeitoriaUnreal_Sample.uproject')"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "outputs": [],
    "source": [
     "# save the level\n",
-    "if xf_runner.engine == 'unreal':\n",
+    "if engine == 'unreal':\n",
     "    xf_runner.utils.save_current_level()   "
    ]
   },
@@ -206,7 +206,7 @@
     "    # The render passes define what kind of data you want to render, such as img, depth, normal, etc.\n",
     "    # and what kind of format you want to save, such as png, exr, etc.\n",
     "    seq.add_to_renderer(\n",
-    "        output_path=f'./tutorial01/outputs/{xf_runner.engine}/',\n",
+    "        output_path=f'./tutorial01/outputs/{engine}/',\n",
     "        resolution=(1280, 720),\n",
     "        render_passes=[RenderPass('img', 'png')]\n",
     "    )"
