--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Overview\n",
     "\n",
-    "🚀 This tutorial demonstrates a minimal application of XRFeitoria. By the end of this tutorial, you will be able to:\n",
+    "🚀 This tutorial demonstrates a minimal application of XRFeitoria. By the end of this tutorial, you will be able to:\\n\",\n",
     "- Open Blender/Unreal Engine by XRFeitoria\n",
     "- Import a mesh\n",
     "- Add a camera\n",
@@ -70,33 +70,32 @@
     "exec_path_stem = Path(engine_exec_path).stem.lower()\n",
     "if 'blender' in exec_path_stem:\n",
     "    # Open Blender\n",
-    "    engine = 'blender'\n",
-    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True)\n",
+    "    render_engine = 'blender'\n",
+    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True, replace_plugin=True, dev_plugin=True)\n",
     "elif 'unreal' in exec_path_stem:\n",
     "    # Unreal Engine requires a project to be opened\n",
     "    # Here we use a sample project, which is downloaded from the following link\n",
     "    # You can also prepare your own project\n",
     "    import shutil\n",
     "    from xrfeitoria.utils.downloader import download\n",
-    "    unreal_project_zip = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/unreal_project/XRFeitoriaUnreal_Sample.zip', \n",
+    "    unreal_project_zip = download(url='https://http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/unreal_project/UE_sample.zip', \n",
     "                                    dst_dir=\"./tutorial01/assets/\")\n",
     "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial01/assets/')\n",
     "\n",
     "    # Open Unreal Engine\n",
-    "    engine = 'unreal'\n",
+    "    render_engine = 'unreal'\n",
     "    xf_runner = xf.init_unreal(exec_path=engine_exec_path, \n",
     "                                background=False, \n",
     "                                new_process=True, \n",
-    "                                project_path='./tutorial01/assets/XRFeitoriaUnreal_Sample/XRFeitoriaUnreal_Sample.uproject')"
+    "                                project_path='./tutorial01/assets/UE_sample/UE_sample.uproject',\n",
+    "                                replace_plugin=True, dev_plugin=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "✨ Now you can see a new Blender/Unreal Engine process has been started.\n",
-    "\n",
-    "![](http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/pics/tutorial/01/blender/open_blender.png)"
+    "✨ Now you can see a new Blender/Unreal Engine process has been started."
    ]
   },
   {
@@ -105,7 +104,7 @@
    "source": [
     "## 3. Import a mesh\n",
     "\n",
-    "Download the [Spot](http://www.cs.cmu.edu/~kmcrane/Projects/ModelRepository/index.html#spot) model by the following cell."
+    "Download the scanned Koupan Chan model by the following cell."
    ]
   },
   {
@@ -117,10 +116,8 @@
     "import shutil\n",
     "from xrfeitoria.utils.downloader import download\n",
     "\n",
-    "# Download the Spot\n",
-    "spot_zip = download('http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/assets/spot.zip', dst_dir=\"./tutorial01/assets/\")\n",
-    "shutil.unpack_archive(filename=spot_zip, extract_dir='./tutorial01/assets/')\n",
-    "spot_path = Path(\"./tutorial01/assets/spot/spot_triangulated.obj\").resolve()"
+    "# Download the Koupan-chan model\n",
+    "kc_path = download('http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/assets/koupen_chan.fbx', dst_dir=\"./tutorial01/assets/\")"
    ]
   },
   {
@@ -138,17 +135,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the spot\n",
-    "actor_spot = xf_runner.Actor.import_from_file(file_path=spot_path)"
+    "# Import the Koupan-chan\n",
+    "actor_kc = xf_runner.Actor.import_from_file(file_path=kc_path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Switch to the engine window, and you can see the spot has been imported. The space to place the ``Actor``s is called ``Level``. ``Level`` is a container of all ``Actor``s. You can add, remove, or modify ``Actor``s in the `Level`.\n",
-    "\n",
-    "![](http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/pics/tutorial/01/blender/import_spot.png)"
+    "Switch to the engine window, and you can see the spot has been imported. The space to place the ``Actor``s is called ``Level``. ``Level`` is a container of all ``Actor``s. You can add, remove, or modify ``Actor``s in the `Level`."
    ]
   },
   {
@@ -165,7 +160,7 @@
    "outputs": [],
    "source": [
     "# save the level\n",
-    "if engine == 'unreal':\n",
+    "if render_engine == 'unreal':\n",
     "    xf_runner.utils.save_current_level()   "
    ]
   },
@@ -173,14 +168,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Add a sequence for rendering\n",
+    "## 4. Add a sequence\n",
     "\n",
     "``Sequence`` is a multifunctional class in XRFeitoria. It can be used for:\n",
     "- rendering\n",
-    "- adding transform keys\n",
-    "- grouping different objects.\n",
+    "- adding transform keys to ``Actor``\n",
+    "- grouping different ``Actor``s\n",
     "\n",
-    "Here, we use it for rendering."
+    "Here, we use it for rendering. Firstly we will add a ``Camera`` in the ``Sequence`` by using the function `spawn_camera` and set its location, rotation, and focal length. Then, we will add a render job to the renderer and set the render settings by using the function ``add_to_renderer``."
    ]
   },
   {
@@ -189,14 +184,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "from xrfeitoria.data_structure.models import RenderPass\n",
     "\n",
     "# Use `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
-    "with xf_runner.Sequence.new(seq_name=\"MySequence\") as seq:\n",
+    "with xf_runner.Sequence.new(seq_name=\"MySequence\", replace=True) as seq:\n",
     "\n",
     "    # Add a camera and make it look at the spot\n",
-    "    camera_location = (-3.0, 0.0, 0.0)\n",
-    "    camera_rotation = xf_runner.utils.get_rotation_to_look_at(location=camera_location, target=actor_spot.location)\n",
+    "    camera_location = (0.0, -0.8, 0.0)\n",
+    "    camera_rotation = xf_runner.utils.get_rotation_to_look_at(location=camera_location, target=actor_kc.location)\n",
     "    seq.spawn_camera(location=camera_location, rotation=camera_rotation, fov=90)\n",
     "\n",
     "    # Add a render job to renderer\n",
@@ -205,10 +201,16 @@
     "    # The resolution is the resolution of the rendered image.\n",
     "    # The render passes define what kind of data you want to render, such as img, depth, normal, etc.\n",
     "    # and what kind of format you want to save, such as png, exr, etc.\n",
+    "    # Here we render all the annotations we support.\n",
     "    seq.add_to_renderer(\n",
-    "        output_path=f'./tutorial01/outputs/{engine}/',\n",
+    "        output_path=f'./tutorial01/outputs/{render_engine}/',\n",
     "        resolution=(1280, 720),\n",
-    "        render_passes=[RenderPass('img', 'png')]\n",
+    "        render_passes=[RenderPass('img', 'png'),\n",
+    "                       RenderPass('mask', 'exr'),\n",
+    "                       RenderPass('depth', 'exr'),\n",
+    "                       RenderPass('flow', 'exr'),\n",
+    "                       RenderPass('normal', 'exr'),\n",
+    "                       RenderPass('diffuse', 'exr')]\n",
     "    )"
    ]
   },
@@ -218,7 +220,7 @@
    "source": [
     "## 5. Render\n",
     "\n",
-    "The following code renders all the render jobs and save the images to the ``output_path`` you set in ``seq.add_to_renderer`` above."
+    "Use the following code to render and save the images to the ``output_path`` you set in ``seq.add_to_renderer`` above."
    ]
   },
   {
@@ -234,9 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the ``output_path``, you can see the rendered images like this:\n",
-    "\n",
-    "![](http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/pics/tutorial/01/blender/0000.png)"
+    "Check the ``output_path``, and you can see the rendered images and various annotations."
    ]
   },
   {
@@ -262,6 +262,22 @@
    "metadata": {},
    "source": [
     "Ref to [api docs](../../apis/xrfeitoria.rst), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Conclusion\n",
+    "\n",
+    "In this tutorial, we imported a mesh and rendered an image for it. To accomplish this procedure, essential steps should be taken:\n",
+    "- Initialization\n",
+    "- Import an `Actor`\n",
+    "- Add a `Sequence`\n",
+    "- Add a `Camera`\n",
+    "- Render\n",
+    "\n",
+    "It is worth mention that while Sequences do not directly perform rendering, the creation of Sequences is necessary for adding cameras and submitting rendering jobs. And the detailed definations of the classes [`Actor`](https://xrfeitoria.readthedocs.io/en/latest/apis/actor.html), [`Camera`](https://xrfeitoria.readthedocs.io/en/latest/apis/camera.html), and [`Sequence`](https://xrfeitoria.readthedocs.io/en/latest/apis/sequence.html) can be referred to the documentation."
    ]
   }
  ],
