--- a/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
+++ b/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
@@ -46,10 +46,10 @@
     "# Replace with your executable path\n",
     "\n",
     "# Blender\n",
-    "# engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
+    "engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
     "\n",
     "# Unreal Engine\n",
-    "engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
+    "# engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
    ]
   },
   {
@@ -63,24 +63,25 @@
     "exec_path_stem = Path(engine_exec_path).stem.lower()\n",
     "if 'blender' in exec_path_stem:\n",
     "    # Open Blender\n",
-    "    engine = 'blender'\n",
-    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True)\n",
+    "    render_engine = 'blender'\n",
+    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True, replace_plugin=True, dev_plugin=True)\n",
     "elif 'unreal' in exec_path_stem:\n",
     "    # Unreal Engine requires a project to be opened\n",
     "    # Here we use a sample project, which is downloaded from the following link\n",
     "    # You can also prepare your own project\n",
     "    import shutil\n",
     "    from xrfeitoria.utils.downloader import download\n",
-    "    unreal_project_zip = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/unreal_project/XRFeitoriaUnreal_Sample.zip', \n",
-    "                                    dst_dir=\"./tutorial03/assets/\")\n",
-    "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial03/assets/')\n",
+    "    unreal_project_zip = download(url='https://http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/unreal_project/UE_sample.zip', \n",
+    "                                    dst_dir=\"./tutorial02/assets/\")\n",
+    "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial02/assets/')\n",
     "\n",
     "    # Open Unreal Engine\n",
-    "    engine = 'unreal'\n",
+    "    render_engine = 'unreal'\n",
     "    xf_runner = xf.init_unreal(exec_path=engine_exec_path, \n",
     "                                background=False, \n",
     "                                new_process=True, \n",
-    "                                project_path='./tutorial03/assets/XRFeitoriaUnreal_Sample/XRFeitoriaUnreal_Sample.uproject')"
+    "                                project_path='./tutorial02/assets/UE_sample/UE_sample.uproject',\n",
+    "                                replace_plugin=True, dev_plugin=True)"
    ]
   },
   {
@@ -137,9 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check them in the engine. Click the play button, and you will see the actor1 has animation and the actor2 is static.\n",
-    "\n",
-    "[image]"
+    "Check them in the engine. Click the play button, and you will see the actor1 has animation and the actor2 is static."
    ]
   },
   {
@@ -162,9 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the engine again. Now the actor2 also has animation.\n",
-    "\n",
-    "[image]"
+    "Check the engine again. Now the actor2 also has animation."
    ]
   },
   {
@@ -200,7 +197,7 @@
    "outputs": [],
    "source": [
     "# save the level\n",
-    "if engine == 'unreal':\n",
+    "if render_engine == 'unreal':\n",
     "    xf_runner.utils.save_current_level()   "
    ]
   },
@@ -242,9 +239,9 @@
     "    actor2_center = ((actor2_bbox[0][0] + actor2_bbox[1][0]) / 2, (actor2_bbox[0][1] + actor2_bbox[1][1]) / 2, (actor2_bbox[0][2] + actor2_bbox[1][2]) / 2)\n",
     "    actors_center = ((actor1_center[0] + actor2_center[0]) / 2, (actor1_center[1] + actor2_center[1]) / 2, (actor1_center[2] + actor2_center[2]) / 2)\n",
     "\n",
-    "    ######\n",
+    "    ##########################################################################\n",
     "    # Add 6 static cameras and a moving camera around the actors for rendering\n",
-    "    ######\n",
+    "    ##########################################################################\n",
     "    # Set cameras' field of view to 90°\n",
     "    camera_fov = 90\n",
     "    # Set cameras' distance to 3.0m\n",
@@ -295,7 +292,7 @@
     "    # The render passes define what kind of data you want to render, such as img, depth, normal, etc.\n",
     "    # and what kind of format you want to save, such as png, exr, etc.\n",
     "    seq.add_to_renderer(\n",
-    "        output_path=f'./tutorial03/outputs/{engine}/',\n",
+    "        output_path=f'./tutorial03/outputs/{render_engine}/',\n",
     "        resolution=(1280, 720),\n",
     "        render_passes=[RenderPass('img', 'png')]\n",
     "    )"
@@ -316,6 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Render\n",
     "xf_runner.render()"
    ]
   },
@@ -323,18 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the ``output_path``, and you can see that for the frame *i*, the image rendered by the moving camera is the same as the image rendered by the *i*th static camera. For example, the ``moving_camera/0002.png`` is the same as the ``static_camera_2/0002.png``.\n",
-    "\n",
-    "[image]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Close the engine\n",
-    "\n",
-    "Finally, close the engine by:"
+    "Check the ``output_path``, and you can see that for the frame *i*, the image rendered by the moving camera is the same as the image rendered by the *i*th static camera. For example, the ``moving_camera/0002.png`` is the same as the ``static_camera_2/0002.png``."
    ]
   },
   {
@@ -343,14 +330,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Close the engine\n",
     "xf_runner.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ref to [api docs](../../apis/xrfeitoria.rst), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
    ]
   }
  ],
