--- a/tutorials/02_add_transform_keys.ipynb
+++ b/tutorials/02_add_transform_keys.ipynb
@@ -23,7 +23,24 @@
    "source": [
     "## 1. Preparation\n",
     "\n",
-    "Similar as Tutorial 01, specify your engine path and initialize XRFeitoria."
+    "Install the following packages that will be used in this tutorial:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install objaverse\n",
+    "%pip install scipy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then similar as Tutorial 01, specify your engine path and initialize XRFeitoria."
    ]
   },
   {
@@ -61,24 +78,25 @@
     "exec_path_stem = Path(engine_exec_path).stem.lower()\n",
     "if 'blender' in exec_path_stem:\n",
     "    # Open Blender\n",
-    "    engine = 'blender'\n",
-    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True)\n",
+    "    render_engine = 'blender'\n",
+    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True, replace_plugin=True, dev_plugin=True)\n",
     "elif 'unreal' in exec_path_stem:\n",
     "    # Unreal Engine requires a project to be opened\n",
     "    # Here we use a sample project, which is downloaded from the following link\n",
     "    # You can also prepare your own project\n",
     "    import shutil\n",
     "    from xrfeitoria.utils.downloader import download\n",
-    "    unreal_project_zip = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/unreal_project/XRFeitoriaUnreal_Sample.zip', \n",
+    "    unreal_project_zip = download(url='https://http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/unreal_project/UE_sample.zip', \n",
     "                                    dst_dir=\"./tutorial02/assets/\")\n",
     "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial02/assets/')\n",
     "\n",
     "    # Open Unreal Engine\n",
-    "    engine = 'unreal'\n",
+    "    render_engine = 'unreal'\n",
     "    xf_runner = xf.init_unreal(exec_path=engine_exec_path, \n",
     "                                background=False, \n",
     "                                new_process=True, \n",
-    "                                project_path='./tutorial02/assets/XRFeitoriaUnreal_Sample/XRFeitoriaUnreal_Sample.uproject')"
+    "                                project_path='./tutorial02/assets/UE_sample/UE_sample.uproject',\n",
+    "                                replace_plugin=True, dev_plugin=True)"
    ]
   },
   {
@@ -94,7 +112,7 @@
    "source": [
     "## 3. Import meshes\n",
     "\n",
-    "Download the meshes of furnitures in [OmniObject3D](https://omniobject3d.github.io/) and the mesh of koupen chan, and import them as ``Actor``s in the ``Level``."
+    "Download the meshes from [Objaverse](https://objaverse.allenai.org/objaverse-1.0/)."
    ]
   },
   {
@@ -103,24 +121,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shutil\n",
-    "from xrfeitoria.utils.downloader import download\n",
     "\n",
-    "# Download the meshes\n",
-    "assets_zip = download('http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/assets/tutorial02.zip', dst_dir=\"./tutorial02/assets/\")\n",
-    "shutil.unpack_archive(filename=assets_zip, extract_dir='./tutorial02/assets/')\n",
+    "import objaverse\n",
+    "objects = objaverse.load_objects(\n",
+    "    uids=['eb0807309530496aaab9dcff67bf5c31',\n",
+    "          'c55eff0309a14cf09423d238900cc7c2',\n",
+    "          'd0e07b22f1d54b968943e7a896235a65',\n",
+    "          'b4065dd5ce9d46be90db3e1f3e4b9cc1',\n",
+    "          '0176be079c2449e7aaebfb652910a854',\n",
+    "          'f130ebeb60f24ed8bd3714a7ed3ba280',\n",
+    "          '289a2221178843a78ad433705555e16a',\n",
+    "          'b7f7ab9bf7244c3a8851bae3fb0bf741',\n",
+    "        ],\n",
+    "    download_processes=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import the meshes to create ``Actor`` instances in the ``Level``."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "chair_path = Path(\"./tutorial02/assets/chair_001/Scan/chair.obj\").resolve()\n",
-    "sofa_path = Path(\"./tutorial02/assets/sofa_001/Scan/sofa.obj\").resolve()\n",
-    "table_path = Path(\"./tutorial02/assets/table_002/Scan/table.obj\").resolve()\n",
-    "koupen_chan_path = Path(\"./tutorial02/assets/koupen_chan.fbx\").resolve()\n",
-    "\n",
-    "# Import the meshes\n",
-    "furnitures = {}\n",
-    "furnitures['chair'] = xf_runner.Actor.import_from_file(file_path=chair_path)\n",
-    "furnitures['table'] = xf_runner.Actor.import_from_file(file_path=table_path)\n",
-    "furnitures['sofa'] = xf_runner.Actor.import_from_file(file_path=sofa_path)\n",
-    "koupen_chan = xf_runner.Actor.import_from_file(file_path=koupen_chan_path)"
+    "actors = []\n",
+    "for _, file_path in objects.items():\n",
+    "    actor = xf_runner.Actor.import_from_file(file_path=file_path)\n",
+    "    actors.append(actor)"
    ]
   },
   {
@@ -129,9 +163,7 @@
    "source": [
     "Switch to the engine window, and you can see the meshes has been imported.\n",
     "\n",
-    "But the Actors are too large, so let's scale them down to a proper size.\n",
-    "\n",
-    "Here we repeatly adjust the scale of the Actors until their size are below 2.0m."
+    "Then, we adjust the scale of the Actors to make their sizes equal to 0.3m."
    ]
   },
   {
@@ -140,21 +172,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for _, furniture in furnitures.items():\n",
-    "    while max(furniture.dimensions) > 2.0:\n",
-    "        furniture.scale = tuple([s * 0.1 for s in furniture.scale])\n",
-    "        \n",
-    "while max(koupen_chan.dimensions) > 2.0:\n",
-    "    koupen_chan.scale = tuple([s * 0.1 for s in koupen_chan.scale])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now they look like:\n",
-    "\n",
-    "[image]"
+    "actor_size = 0.3\n",
+    "for actor in actors:\n",
+    "    actor.scale = (actor_size / max(actor.dimensions), ) * 3"
    ]
   },
   {
@@ -171,7 +191,7 @@
    "outputs": [],
    "source": [
     "# save the level\n",
-    "if engine == 'unreal':\n",
+    "if render_engine == 'unreal':\n",
     "    xf_runner.utils.save_current_level()   "
    ]
   },
@@ -186,7 +206,17 @@
     "- adding transform keys\n",
     "- grouping different objects.\n",
     "\n",
-    "Here, we use it for rendering and adding transform keys."
+    "Here, we use it for ``rendering`` and ``adding transform keys``."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">``Transform keys`` record the tranformation (location, rotation and scale) of an ``Actor`` at specific frames, and the tranformation between two adjacent keys will be interpolated by the specified interpolation method. By adding transform keys, you can render multiple poses of an ``Actor``.\n",
+    ">In ``XRFeitoria``, transform keys are always stored in a list, and the members of the list are [``SequenceTransformKey``](https://xrfeitoria.readthedocs.io/en/latest/apis/generated/xrfeitoria.data_structure.models.SequenceTransformKey.html) object.\n",
+    "\n",
+    "Firstly, we randomly generate some transform keys for each actors."
    ]
   },
   {
@@ -196,74 +226,102 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "import copy\n",
-    "from xrfeitoria.data_structure.models import RenderPass\n",
+    "from loguru import logger\n",
+    "from scipy.stats import qmc\n",
     "from xrfeitoria.data_structure.models import SequenceTransformKey as SeqTransKey\n",
     "\n",
-    "# Use `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
+    "# Set the number of frames\n",
+    "frame_num = 10\n",
+    "\n",
+    "# Use a dictionary to store the transform keys of all actors\n",
+    "all_actors_transform_keys = {actor: [] for actor in actors}\n",
+    "\n",
+    "# Iterate over all frames\n",
+    "for i in range(frame_num):\n",
+    "\n",
+    "    # Generate random locations by Poisson Disk Sampling\n",
+    "    # The minimum distance between two actors is set to be 0.8 * actor_size\n",
+    "    posson_engine = qmc.PoissonDisk(d=2, radius=actor_size * 0.8)\n",
+    "    sample_location = posson_engine.random(len(actors))\n",
+    "    \n",
+    "    # Set the transform keys for each actor\n",
+    "    for actor_idx, actor in enumerate(actors):\n",
+    "        actor_scale = actor.scale\n",
+    "        \n",
+    "        # Get the location from the samples generated by Poisson Disk Sampling\n",
+    "        random_location = (sample_location[actor_idx][0], \n",
+    "                           0.0, \n",
+    "                           sample_location[actor_idx][1])\n",
+    "        \n",
+    "        # Generate random rotations\n",
+    "        random_rotation = (random.random() * 360.0,\n",
+    "                           random.random() * 360.0,\n",
+    "                           random.random() * 360.0)\n",
+    "        \n",
+    "        # Generate random scales\n",
+    "        scale = random.uniform(0.8, 1.0)\n",
+    "        random_scale = (scale * actor_scale[0],\n",
+    "                        scale * actor_scale[1],\n",
+    "                        scale * actor_scale[2])\n",
+    "        \n",
+    "        # Save the transform keys\n",
+    "        all_actors_transform_keys[actor].append(\n",
+    "            SeqTransKey(\n",
+    "                frame=i,\n",
+    "                location=random_location,\n",
+    "                rotation=random_rotation,\n",
+    "                scale=random_scale,\n",
+    "                interpolation='AUTO',\n",
+    "            )            \n",
+    "        )\n",
+    "    logger.info(f'Generated transform keys of frame {i}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we create a ``Sequence`` to apply the transform keys to the actors and render the images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xrfeitoria.data_structure.models import RenderPass\n",
+    "\n",
+    "# Use the `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
     "# The argument `seq_length` controls the number of frames to be rendered. \n",
-    "with xf_runner.Sequence.new(seq_name=\"MySequence\", seq_length=20) as seq:\n",
+    "with xf_runner.Sequence.new(seq_name=\"MySequence\", seq_length=frame_num) as seq:\n",
     "    ##############################\n",
     "    ##### Add transform keys #####\n",
     "    ##############################\n",
     "\n",
-    "    # We want to add transform keys to the furnitures to randomly change their locations and rotations in the room.\n",
-    "    transform_keys = {}\n",
-    "    actor_idx = 0\n",
-    "    \n",
-    "    for name, actor in furnitures.items():\n",
-    "        actor_rotation = actor.rotation\n",
-    "        actor_scale = actor.scale\n",
-    "        for i in range(20):\n",
-    "            random_location = (random.uniform(actor_idx * 1.0, actor_idx * 1.0 + 1.0), \n",
-    "                               random.uniform(0.0, 2.0), \n",
-    "                               1.0)\n",
-    "            random_rotation = (actor_rotation[0],\n",
-    "                               actor_rotation[1],\n",
-    "                               actor_rotation[2] + random.randint(0, 3) * 90)\n",
-    "\n",
-    "            transform_keys[name].append(\n",
-    "                SeqTransKey(\n",
-    "                    frame=i,\n",
-    "                    location=random_location,\n",
-    "                    rotation=random_rotation,\n",
-    "                    scale=actor_scale,\n",
-    "                    interpolation='AUTO',\n",
-    "                )            \n",
-    "            )\n",
-    "        # The function `use_actor_with_keys` sets transform keys for the actor in the sequence.\n",
-    "        # The transform keys are only stored in the sequence.\n",
-    "        # When the sequence is closed, the actor's location, rotation and scale will be restored to its original state(without transform keys).\n",
-    "        seq.use_actor_with_keys(actor=actor, transform_keys=transform_keys[name])\n",
-    "        actor_idx += 1\n",
-    "    \n",
-    "    # Add transform keys to koupen_chan to make it always sit on the table\n",
-    "    koupen_chan_transform_keys = copy.deepcopy(transform_keys['table'])\n",
-    "    for keys in koupen_chan_transform_keys:\n",
-    "        keys.location = (keys.location[0], keys.location[1], keys.location[2] + furnitures['table'].dimensions[2] * 0.5)\n",
-    "        keys.scale = koupen_chan.scale\n",
     "    # The function `use_actor_with_keys` sets transform keys for the actor in the sequence.\n",
     "    # The transform keys are only stored in the sequence.\n",
     "    # When the sequence is closed, the actor will be restored to its original state(without transform keys).\n",
-    "    seq.use_actor_with_keys(actor=koupen_chan, transform_keys=koupen_chan_transform_keys)\n",
+    "    for actor, keys in all_actors_transform_keys.items():\n",
+    "        seq.use_actor_with_keys(actor=actor, transform_keys=keys)\n",
     "\n",
     "    #####################\n",
     "    ##### Rendering #####\n",
     "    #####################\n",
     "\n",
     "    # Add a camera and make it look at the specified location\n",
-    "    camera_location = (1.5, -2.0, 3.0)\n",
-    "    camera_rotation = xf_runner.utils.get_rotation_to_look_at(location=camera_location, target=(1.5, 1.0, 1.0))\n",
-    "    seq.spawn_camera(location=camera_location, rotation=camera_rotation, fov=90)\n",
+    "    camera_location = (0.5, -3.0, 0.5)\n",
+    "    camera_rotation = xf_runner.utils.get_rotation_to_look_at(location=camera_location, target=(0.5, 0.0, 0.5))\n",
+    "    seq.spawn_camera(location=camera_location, rotation=camera_rotation, fov=45)\n",
     "\n",
     "    # Add a render job to renderer\n",
     "    # In render job, you can specify the output path, resolution, render passes, etc.\n",
     "    # The ``output_path`` is the path to save the rendered data.\n",
     "    # The ``resolution`` is the resolution of the rendered image.\n",
     "    # The ``render_passes`` define what kind of data you want to render, such as img, depth, normal, etc.\n",
-    "    # and what kind of format you want to save, such as png, exr, etc.\n",
+    "    # and what kind of format you want to save, such as png, jpg, exr, etc.\n",
     "    seq.add_to_renderer(\n",
-    "        output_path=f'./tutorial02/outputs/{engine}/',\n",
+    "        output_path=f'./tutorial02/outputs/{render_engine}/',\n",
     "        resolution=(1280, 720),\n",
     "        render_passes=[RenderPass('img', 'png')],\n",
     "    )"
@@ -284,6 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Render\n",
     "xf_runner.render()"
    ]
   },
@@ -293,16 +352,8 @@
    "source": [
     "Check the ``output_path``, and you can see the rendered images like this:\n",
     "\n",
-    "[image]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Close the engine\n",
-    "\n",
-    "Finally, close the engine by:"
+    "![](http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/pics/tutorial/02/blender/outputs.png)\n",
+    "![](http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/pics/tutorial/02/blender/outputs.png)"
    ]
   },
   {
@@ -311,14 +362,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Close the engine\n",
     "xf_runner.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ref to [api docs](../../apis/xrfeitoria.rst), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
    ]
   }
  ],
